--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://res.cloudinary.com/dzsvbfzti/image/upload/v1740761611/xxyghcy55zqgzubqr7yc.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MoviesBaros - Grab Your Movies Now !!</title>
 </head>
